2004-05-26  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl: Replaced use of != for string comparision with
	  equivalent but correcter 'string compare'.
	  Fixed a bug with special logger names demonstrated by test 1.3.
	* logger.test: Added test for special logger name.
	  
2004-05-26  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl: Fixed bug with enable/disable
	  wrong enabled value was reported if disable critical was used.
	  Added "none" as result for currentloglevel for this situation.
	* logger.test: Added tests 7.1-7.4 to check for the above bug.
	* logger.man: Fixed docs and replaced the nonsensical "or" with 
	  the correct "and" in enable/disable docs. Added a comment how
	  to completely disable logging for a service and its children. 

2004-05-25  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl: Fixed bug [948273] in ::logger::services
	  Fixed cleanup of services list in delproc
	  Implemented doc'ed but missing ${log}::services subcommand
	  Fixed misuse of set inside namespace eval to prevent 
	  overwriting of global variables
	  Added new subcommands servicecmd and servicename 
	  for introspection
	  Added introspection to logproc and delproc
	  Version number changed to 0.4
	* pkgIndex.tcl: updated version number of logger package
	* logger.man: updated docs for ${log}::services,
	  ${log}::delproc and ${log}::logproc.
	  Added docs for servicecmd and servicename.
	* logger.test: Added tests for new features and fixed bugs

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.tcl: Updated version number to sync with 1.6.1
	* log.man: release.
	* pkgIndex.tcl:

2004-03-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.tcl: Added initialization code to suppress the lower levels
	  (warning notice info debug) from generating output. In other
	  words, by default only statements with messages of level error