@@ -1,3 +1,9 @@
+2004-06-04  Michael Schlenker <mic42@users.sourceforge.net>
+
+	* logger.tcl : Changed error handling from ::error to
+	  logger.test: return -code error. Added more tests and
+	  argument checking to make the code more robust.             
+	  
 2004-05-26  Michael Schlenker <mic42@users.sourceforge.net>
 
 	* logger.tcl: Replaced use of != for string comparision with
